# anilibria.py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  encode.json  feed_data.json  playlist_update.json  pyproject.toml  readthedocs.yaml  requirements-docs.txt  requirements.txt  setup.py  test_bot.py  title_update.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ------------------------------.md  ----------------.md
anilibria/: __init__.py  client.py  const.py
anilibria/api/: __init__.py  dispatch.py  error.py  listener.py
anilibria/api/gateway/: __init__.py  client.py  events.py  misc.py
anilibria/api/gateway/events/: __init__.py  anilibria.py  base.py  events.py  internal.py
anilibria/api/http/: __init__.py  client.py  other.py  public.py  request.py  route.py  v2.py
anilibria/api/models/: __init__.py  attrs_utils.py  cattrs_hooks.py  cattrs_utils.py  enums.py  misc.py  title.py
anilibria/api/models/v2/: __init__.py  enums.py  misc.py  title.py
anilibria/client/: __init__.py  client.py
anilibria/utils/: __init__.py  missing.py  serializer.py  typings.py
docs/: anilibria.api.gateway.client.rst  anilibria.api.gateway.events.rst  anilibria.api.gateway.rst  anilibria.api.http.rst  anilibria.api.models.enums.rst  anilibria.api.models.public.rst  anilibria.api.models.rst  anilibria.api.models.v2.enums.rst  anilibria.api.models.v2.rst  anilibria.api.rst  anilibria.rst  api.models.v2.misc.rst  api.models.v2.title.rst  api.rst  archive.rst  client.rst  conf.py  development_bot.rst  events.rst  index.rst  models.rst  modules.rst
examples/: aiogram_bot.py  aiogram_v2_bot.py  aiogram_v3_bot.py  disnake_bot.py
