[tool.black]
exclude = '/(\.eggs|\.git|\.mypy_cache|\.venv.*|_build|build|dist)/'
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "anilibria.py"
version = "1.0.0"
description = "An async API wrapper for the anilibria.tv"
authors = ["Damego <damego.dev@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.22.0"
attrs = "^22.2.0"
cattrs = "^22.2.0"
trio-websocket = "^0.9.2"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-hoverxref = "^1.3.0"
furo = "^2022.12.7"
readthedocs-sphinx-search = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
