[tool.black]
exclude = '/(\.eggs|\.git|\.mypy_cache|\.venv.*|_build|build|dist)/'
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "anilibria.py"
version = "1.0.3"
description = "An async API wrapper for the anilibria.tv"
authors = ["Damego <damego.dev@gmail.com>"]
license = "GPL-3.0"
packages=[
    {include = "anilibria"}
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
cattrs = "^22.2.0"
orjson = "^3.8.5"
aiohttp = "^3.8.3"
tomli = "^2.0.1"

[tool.poetry.group.readthedocs]
optional=true

[tool.poetry.group.readthedocs.dependencies]
Sphinx = "^6.1.3"
sphinx-hoverxref = "^1.3.0"
furo = "^2022.12.7"
readthedocs-sphinx-search = "^0.1.2"

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"
#[build-system]
#requires = ["poetry-core>=1.3.0"]
#build-backend = "poetry.core.masonry.api"
